--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap");
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0;
-  margin:0;
+  margin: 0;
 }
 
 html {
@@ -12,8 +12,7 @@ html {
 
 body {
   font-size: 18px;
+  background-color: #f8e9dd;
+  padding: 4rem 1rem;
 }
-
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
-
+/*# sourceMappingURL=index.css.map */
