added chart and footer components

--- a/src/components/Spending/Chart.module.css
+++ b/src/components/Spending/Chart.module.css
@@ -1,1 +1,64 @@
-/* No CSS *//*# sourceMappingURL=Chart.module.css.map */
+.chart {
+  padding-top: 0.3rem;
+  padding-bottom: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.chart .bar-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: calc(100% / 7);
+  cursor: pointer;
+}
+
+.chart .bar-group:hover .bar-number {
+  opacity: 1;
+}
+
+.chart .bar-group:hover .bar {
+  opacity: .7;
+}
+
+.chart .bar-group .bar-number {
+  background: #382314;
+  color: #fffaf5;
+  border-radius: 5px;
+  padding: 0.3rem;
+  font-size: 0.7rem;
+  opacity: 0;
+}
+
+.chart .bar-group .bar {
+  width: 75%;
+  height: 4rem;
+  background-color: #ec775f;
+  border-radius: 5px;
+  margin: 0.4rem 0;
+}
+
+.chart .bar-group .selected {
+  background-color: #76b5bc;
+}
+
+.chart .bar-group .bar-label {
+  color: #93867b;
+  font-size: 0.9rem;
+}
+/*# sourceMappingURL=Chart.module.css.map */
