--- a/src/components/Balance.module.css
+++ b/src/components/Balance.module.css
@@ -32,4 +32,20 @@
 .balance img {
   width: 3.5rem;
 }
+
+@media (min-width: 376px) {
+  .balance {
+    padding: 1.5rem;
+    border-radius: 15px;
+  }
+  .balance p:first-of-type {
+    font-size: 1rem;
+  }
+  .balance p:nth-of-type(2) {
+    font-size: 2rem;
+  }
+  .balance img {
+    width: 4rem;
+  }
+}
 /*# sourceMappingURL=Balance.module.css.map */
