--- a/src/components/Balance.module.scss
+++ b/src/components/Balance.module.scss
@@ -22,3 +22,19 @@
         width: 3.5rem;
     }
 }
+
+@media (min-width: 376px) {
+    .balance{
+        padding: 1.5rem;
+        border-radius: 15px;
+        p:first-of-type{
+            font-size: 1rem;
+        }
+        p:nth-of-type(2){
+            font-size:2rem;
+        }
+        img{
+            width: 4rem;
+        }
+    }
+}
