--- a/src/components/Spending/MonthTotal.module.css
+++ b/src/components/Spending/MonthTotal.module.css
@@ -16,7 +16,7 @@
 .month-total .left p:first-of-type {
   color: #93867b;
   font-size: 1rem;
-  margin-bottom: .25rem;
+  margin-bottom: 0.25rem;
 }
 
 .month-total .left p:nth-of-type(2) {
@@ -49,5 +49,23 @@
 
 .month-total .right p:nth-of-type(2) {
   color: #93867b;
+}
+
+@media (min-width: 376px) {
+  .month-total {
+    padding-top: 2rem;
+  }
+  .month-total .left p:first-of-type {
+    font-size: 1.2rem;
+  }
+  .month-total .left p:nth-of-type(2) {
+    font-size: 3rem;
+  }
+  .month-total .right p:first-of-type {
+    font-size: 1.3rem;
+  }
+  .month-total .right p:nth-of-type(2) {
+    font-size: 1.2rem;
+  }
 }
 /*# sourceMappingURL=MonthTotal.module.css.map */
